@@ -8,41 +8,41 @@ import springfox.documentation.service.*;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
-import java.util.*;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class SwaggerConfig {
     public static final String AUTHORIZATION_HEADER = "Authorization";
+
     @Bean
-    public Docket api(){
+    public Docket api() {
         return new Docket(DocumentationType.SWAGGER_2)
                 .apiInfo(getInfo())
                 .securityContexts(securityContexts())
-                .securitySchemes(Arrays.asList(apiKeys()))
+                .securitySchemes(List.of(apiKeys()))
                 .select()
                 .apis(RequestHandlerSelectors.any())
                 .paths(PathSelectors.any()).build();
     }
 
-    private ApiInfo getInfo(){
-        return new ApiInfo("Blogging Application","This Project is developed by: Saket Wakekar",
-                "1.0","Terms of Service",new Contact("Saket Wakekar","www.gmail.com",
-                "saketwakekar@gmail.com"),"Licence of API","API Licence URL",Collections.emptyList());
+    private ApiInfo getInfo() {
+        return new ApiInfo("Blogging Application", "This Project is developed by: Saket Wakekar",
+                "1.0", "Terms of Service", new Contact("Saket Wakekar", "www.gmail.com",
+                "saketwakekar@gmail.com"), "Licence of API", "API Licence URL", Collections.emptyList());
     }
 
-    private ApiKey apiKeys(){
-        return new ApiKey("JWT",AUTHORIZATION_HEADER,"Header");
+    private ApiKey apiKeys() {
+        return new ApiKey("JWT", AUTHORIZATION_HEADER, "Header");
     }
 
-    private List<SecurityContext> securityContexts(){
-        return Arrays.asList(SecurityContext.builder().securityReferences(securityReferences()).build());
+    private List<SecurityContext> securityContexts() {
+        return Collections.singletonList(SecurityContext.builder().securityReferences(securityReferences()).build());
     }
 
-    private List<SecurityReference> securityReferences(){
-        AuthorizationScope authorizationScope = new AuthorizationScope("Global","Access everything");
-        return Arrays.asList(new SecurityReference("JWT", new AuthorizationScope[]{authorizationScope}));
+    private List<SecurityReference> securityReferences() {
+        AuthorizationScope authorizationScope = new AuthorizationScope("Global", "Access everything");
+        return List.of(new SecurityReference("JWT", new AuthorizationScope[]{authorizationScope}));
     }
 }
